// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveRecoveryCodeModal presentation display 1`] = `
<form class="wrapper">
  <div class="content ">
    <p>Please keep your recovery codes in a safe place. Otherwise, you can permanently
      lose access to your account if you loose your 2FA device</p>
    <p>Each recovery code can only be used once</p>
    <ol class="list">
      <li class="item">
        <pre class="code">5bb72b16</pre>
      </li>
      <li class="item">
        <pre class="code">87739d2c</pre>
      </li>
      <li class="item">
        <pre class="code">6c11bf08</pre>
      </li>
      <li class="item">
        <pre class="code">37b9d9f5</pre>
      </li>
      <li class="item">
        <pre class="code">8561a630</pre>
      </li>
      <li class="item">
        <pre class="code">4684bfc5</pre>
      </li>
      <li class="item">
        <pre class="code">8a7a4335</pre>
      </li>
      <li class="item">
        <pre class="code">5c7235c5</pre>
      </li>
      <li class="item">
        <pre class="code">542a1827</pre>
      </li>
      <li class="item">
        <pre class="code">52d64018</pre>
      </li>
      <li class="item">
        <pre class="code">945dcb5d</pre>
      </li>
      <li class="item">
        <pre class="code">3bfe23c9</pre>
      </li>
    </ol>
    <div class="actions">
      <button type="button" class="button">DOWNLOAD CODES</button>
      <button type="button" class="button">COPY CODES</button>
    </div>
  </div>
  <div class="footer">
    <button type="reset" value="Reset" disabled>Back</button>
    <button type="submit" value="Submit">Next</button>
  </div>
</form>
`;

exports[`SaveRecoveryCodeModal presentation loading display 1`] = `
<form class="wrapper">
  <div class="content ">
    <p>Please keep your recovery codes in a safe place. Otherwise, you can permanently
      lose access to your account if you loose your 2FA device</p>
    <p>Each recovery code can only be used once</p>
    <p>Loading...</p>
  </div>
  <div class="footer">
    <button type="reset" value="Reset" disabled>Back</button>
    <button type="submit" value="Submit">Next</button>
  </div>
</form>
`;
